2002-05-06  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Vietnamese (vi) to ALL_LINGUAS

2002-05-05  Steffen Macke <sdteffen@web.de>

	* app/Makefile.am: added $(UNICODE_CFLAGS)
	
2002-05-02  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* app/commands.c (help_manual_callback): Check return value of
	opendir.

	* plug-ins/xfig/Makefile.am (INCLUDES): Added DEBUG_FLAGS

	* plug-ins/xfig/xfig-import.c: Fixed misspelled Poly_L_ine, added
	checks for errors.

2002-04-30  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* app/render_gdk.c (draw_string): Extra free killed.  Thanks valgrind!

	* objects/UML/uml.c (uml_operation_read): Fix of UML default
	inheritance. 

2002-04-30  Lars Clausen  <lrclause@C194282.chmpgn1.il.home.com>

	* app/filedlg.c (file_save_as_callback, file_save_as_ok_callback):
	Added button to toggle diagram compression.

2002-04-29  Lars Clausen  <lrclause@C194282.chmpgn1.il.home.com>

	* lib/font.c: Support for loading extra kerning files, plus got
	rid of rounding errors.  Bounding box mostly perfect for freetype
	fonts.
	(font_string_width): Fudge factor to get around nonlinearity of
	font scaling.

2002-04-29  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* lib/font.c (font_string_width): YA font calculation scheme, with
	comments.

	* objects/UML/class.c (umlclass_calculate_data): Uses the same
	font for drawing and calculating now.

	* configure.in: Added utime.h check.

	* app/render_gdk.c (draw_string): Uses gdk_draw_text_wc when in
	GTK_DOESNT_TALK_UTF8_WE_DO.  Thus it matches the string width calc.

2002-04-26  Hans Breuer  <hans@breuer.org>

	[ Instead of fixing about 70 occurances in 20 files
	  where GTK_TALKS_UTF8_WE_DONT needed to be handled
	  Dia on win32 from now on uses glib-2.0 and not 
	  only talks utf-8 with gtk-1.3 but also internally.
	  GTK_TALKS_UTF8_WE_DONT isn't supported/needed
	  anymore. ]

	* config.h.win32 : #define UNICODE_WORK_IN_PROGRESS